Bug 202278 - BQM: sharpen tool resets EXIF orientation
Summary: BQM: sharpen tool resets EXIF orientation
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Plugin-Bqm-Sharpen (other bugs)
Version First Reported In: 1.0.0
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-08-02 11:27 UTC by Frank Zacharias
Modified: 2016-07-04 08:21 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Frank Zacharias 2009-08-02 11:27:58 UTC
Version:           1.0.0-beta3 (using KDE 4.2.4)
OS:                Linux
Installed from:    Debian testing/unstable Packages

 Hi,

When using the sharpen tool (alone or as first) in batch queue manager the resulting images have wrong orientation in EXIF.
steps to reproduce:
+ mark some images within album view
+ right click: Batch Queue Manager -> Add to existing queue -> #1
+ open BQM
+ set Target Album, File Renaming (customize filename: foobar_$)
+ go to Base Tools, double click 'Sharpen Image'
+ click 'Run'
-> check resulting images: pictures taken in portrait mode (EXIF orientation field says: left, bottom) were not rotated, but have a different orientation now (top, left).
Comment 1 Andi Clemens 2009-09-02 19:00:25 UTC
The same seems to be true for the resize tool
Comment 2 Marcel Wiesweg 2009-11-29 16:21:34 UTC
Looking at the source of BatchTool and ActionThread, d->exifSetOrientation is always true, and not changed by any tool, so for all tools, the orientation tag will be reset to NORMAL.
I would suggest to be more precise with the wording ("resetExifOrientation") and default to false - which tools need to reset the orientation tag?
Comment 3 Marcel Wiesweg 2009-12-17 22:22:40 UTC
Gilles, this bug should be fixed as well.
As I see it, only Flip and Rotate need to reset the rotation flag, all other tools should not touch this flag. Ok?
Comment 4 caulier.gilles 2009-12-17 22:43:02 UTC
Yes Marcel, only these both tools must do that...

Gilles
Comment 5 Marcel Wiesweg 2009-12-19 16:04:06 UTC
SVN commit 1063913 by mwiesweg:

There were two different settings merged in one:
- the user allows to edit the exif orientation - from digikam settings
- the tool needs to reset the flag - only flip and rotate need that.
Treat this distinctly, so that not all images processed by BQM have their orientation reset.

BUG: 202278

 M  +2 -1      NEWS  
 M  +2 -2      utilities/queuemanager/actionthread.cpp  
 M  +1 -1      utilities/queuemanager/actionthread.h  
 M  +2 -0      utilities/queuemanager/basetools/transform/flip.cpp  
 M  +2 -0      utilities/queuemanager/basetools/transform/rotate.cpp  
 M  +25 -12    utilities/queuemanager/batchtool.cpp  
 M  +12 -4     utilities/queuemanager/batchtool.h  
 M  +1 -1      utilities/queuemanager/queuemgrwindow.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1063913
Comment 6 Jens Mueller 2010-01-07 21:59:21 UTC
(In reply to comment #5)
> - the tool needs to reset the flag - only flip and rotate need that.

Marcel, what about converter tools (png, tiff, jpeg, ...)? Please have look on https://bugs.kde.org/show_bug.cgi?id=221113#c4

Jens