There were two different settings merged in one: - the user allows to edit the exif orientation - from digikam settings - the tool needs to reset the flag - only flip and rotate need that. Treat this distinctly, so that not all images processed by BQM have their orientation reset.

BUG: 202278

svn path=/trunk/extragear/graphics/digikam/; revision=1063913