utilities/queuemanager/basetools/transform/flip.cpp
@@ -62,6 +62,8 @@ Flip::Flip(QObject* parent)
 
     setSettingsWidget(vbox);
 
+    setNeedResetExifOrientation(true);
+
     connect(m_comboBox, SIGNAL(activated(int)),
             this, SLOT(slotSettingsChanged()));
 }
